2010-07-23  Nikolai Weibull

	* src/: Use GOBJ2RVAL_UNREF where appropriate.

2010-07-12  Nikolai Weibull

	* src/: Update to GIO 2.24.1.

2010-06-16  Nikolai Weibull

	* src/: Remove macro use.

2009-09-23  Kouhei Sutou  <kou@cozmixng.org>

	* src/: add copyright header.
