@@ -1,3 +1,7 @@
+2010-09-23  Kouhei Sutou  <kou@cozmixng.org>
+
+	* extconf.rb: support Ruby/GLib2 directory structure change.
+
 2010-07-23  Nikolai Weibull
 
 	* src/: Use GOBJ2RVAL_UNREF where appropriate.
